ignore other latyers

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "gen": "ergogen samoklava.yaml"
   },
   "dependencies": {
-    "ergogen": "github:ergogen/ergogen"
+    "ergogen": "github:ariaga-ii/ergogen#samoklava"
   }
 }
