--- a/samoklava.yaml
+++ b/samoklava.yaml
@@ -85,7 +85,7 @@ points:
           spread: kx
           rotate: -15
           origin: [-0.5 kx, -0.5 ky]
-          shift: [0.5kx, -0.5ky]
+          stagger: 4.5 
           key:
             column_net: P14
       rows:
