--- a/samoklava.yaml
+++ b/samoklava.yaml
@@ -9,7 +9,7 @@ points:
       choc_hotswap:
         type: choc
         params:
-          hotswap: false 
+          hotswap: false
           reverse: true
           keycaps: true
         nets:
@@ -85,7 +85,6 @@ points:
           spread: kx
           rotate: -15
           origin: [-0.5 kx, -0.5 ky]
-          # stagger: 4.5 
           key:
             column_net: P14
       rows:
@@ -253,29 +252,29 @@ outlines:
         name: mounting_holes
         operation: subtract
 pcbs:
-  # top_plate:
-  #   # include JLCJLCJLCJLC text somewhere
-  #   include_keys: false
-  #   outlines:
-  #     edge:
-  #       outline: plate
-  #       layer: Edge.Cuts
-  #   footprints:
-  #     jlc_order_number:
-  #       type: text
-  #       anchor:
-  #         ref:
-  #           - matrix_ring_home
-  #         shift: [-0.25 kx, 0.5 ky]
-  #       params:
-  #         text: "JLCJLCJLCJLC"
-  #         justify: left
-  # bottom_plate:
-  #   include_keys: false
-  #   outlines:
-  #     edge:
-  #       outline: bottom_outline
-  #       layer: Edge.Cuts
+  top_plate:
+    # include JLCJLCJLCJLC text somewhere
+    include_keys: false
+    outlines:
+      edge:
+        outline: plate
+        layer: Edge.Cuts
+    footprints:
+      jlc_order_number:
+        type: text
+        anchor:
+          ref:
+            - matrix_ring_home
+          shift: [-0.25 kx, 0.5 ky]
+        params:
+          text: "JLCJLCJLCJLC"
+          justify: left
+  bottom_plate:
+    include_keys: false
+    outlines:
+      edge:
+        outline: bottom_outline
+        layer: Edge.Cuts
   board:
     outlines:
       edge:
@@ -444,4 +443,3 @@ pcbs:
           layer: B.SilkS
           text: "samoklava v0.1\\nby soundmonster"
           justify: right mirror
-
