--- a/.github/actions/autoroute/action.yml
+++ b/.github/actions/autoroute/action.yml
@@ -14,4 +14,4 @@ runs:
   args:
     - '-c'
     - |
-      java -jar /opt/freerouting_cli.jar -de ${{ inputs.dsn_file }} -do ${{ inputs.ses_file }} -mp 64
+      java -jar /opt/freerouting_cli.jar -de ${{ inputs.dsn_file }} -do ${{ inputs.ses_file }} -ap 64
